# ratatouille

./: .gitignore  .travis.yml  aerich.ini  docker-compose.yml  makefile  manage.py  pyproject.toml  readme.md
cli/: elastic.py  helpers.py
migrations/models/: 0_20210407124549_init.sql  0_20210413193912_init.sql  0_20210418185116_init.sql  1_20210414193255_update.sql  2_20210415093610_update.sql
ratatouille/: asgi.py  router.py  settings.py
ratatouille/common/: elastic.py  models.py  test.py  tests.py
ratatouille/common/tests/: test_elastic.py  test_models.py
ratatouille/controllers/: __init__.py  openapi.py  ping.py
ratatouille/controllers/tests/: test_health.py  test_ping.py
ratatouille/core/: models.py  testing.py
ratatouille/core/tests/: test_elastic.py  test_models.py
ratatouille/models/: __init__.py  user.py
ratatouille/models/factories/: __init__.py  user_factories.py
ratatouille/models/tests/: test_user.py
ratatouille/router/: __init__.py  routes.py
ratatouille/security/: auth.py
ratatouille/security/auth/: errors.py  gandalf.py  helpers.py
ratatouille/security/permissions/: __init__.py  base.py  helpers.py
ratatouille/security/permissions/tests/: test_base.py  test_helpers.py
ratatouille/security/tests/: test_auth.py
ratatouille/vendors/: gandalf.py
ratatouille/vendors/tests/: test_gandalf.py
