[tool.poetry]
name = "ratatouille"
version = "0.1.0"
description = ""
authors = ["alvarogf97 <ankora45@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
ipython = "^7.21.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"
coveralls = "^3.0.1"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["./ratatouille/", "/app/ratatouille/"]
